@@ -1,3 +1,6 @@
+2002-09-25 NOB <noba at harunaru.com>
+	* plugin/recent-entry.rb: remove category from title.
+
 2002-09-21 vette <vette at mail.ne.jp>
 	* plugin/blog-category.rb: insert category list into update form.
 
